<resources>
    <string name="app_name">Rate\'em</string>
    <string name="activity_list">Orte</string>
    <string name="action_settings">Einstellungen</string>
    <string name="action_navigate">Navigieren</string>
    <string name="action_save">Speichern</string>
    <string name="find_me">Standort suchen</string>
    <string name="search">Suchen</string>
    <string name="profilepicture">Profilbild</string>
    <string name="username">Benutzername</string>
    <string name="rank">Rang</string>
    <string name="favourite">Favorit</string>

    <string name="nav_locations">Orte</string>
    <string name="nav_near_to_me">In meiner Nähe</string>
    <string name="nav_search">Suche</string>
    <string name="nav_profile">Mein Profil</string>
    <string name="nav_ratings">Meine Bewertungen</string>
    <string name="nav_favourites">Meine Favoriten</string>
    <string name="nav_ranks">Meine Ränge</string>
    <string name="nav_settings">Einstellungen</string>

    <string name="nav_about">Über diese App</string>
    <string name="nav_share">Meinen Freunden berichten</string>
    <string name="nav_purchase">Pro Version Kaufen</string>


    <string name="name">Name</string>
    <string name="street">Straße</string>
    <string name="city">Stadt</string>
    <string name="address">Adresse</string>
    <string name="country">Land</string>
    <string name="rating">Bewertungen</string>
    <string name="report_rating">Bewertung melden</string>

    <string name="loginBtn">Anmelden</string>
    <string name="registerBtn">Registrieren</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
